--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem 3rem;
   text-align: center;
 }
 
@@ -10,12 +10,6 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
@@ -33,10 +27,28 @@
   }
 }
 
-.card {
-  padding: 2em;
+.page-header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
-.read-the-docs {
-  color: #888;
+.header-img {
+  flex-shrink: 0;
+  min-width: 80px;
+  height: 128px;
+  object-fit: cover;
+}
+
+.search-menu {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: 1px solid gray;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+.search-input {
+  flex-grow: 1;
 }
