--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,43 @@
 .search-input {
   flex-grow: 1;
 }
+
+.list {
+  min-width: 380px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.item {
+  border: 1px dotted grey;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.item-title {
+  margin: 0;
+  font-size: 1.3rem;
+  background-color: white;
+  color: black;
+  padding: 6px;
+  margin-bottom: 10px;
+  align-self: stretch;
+}
+
+.item p {
+  margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+.field-label {
+  min-width: 200px;
+  text-align: right;
+  color: wheat;
+}
+
+.field-text {
+  font-weight: 600;
+}
