--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,9 @@ button {
   background-color: rgba(255, 255, 255, 0.87);
   cursor: pointer;
   transition: border-color 0.25s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 button:hover {
   border-color: #646cff;
