--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,15 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  border-bottom: 1px solid gray;
   padding-bottom: 15px;
-  margin-bottom: 15px;
 }
+
+.tip {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid gray;
+}
+
 .search-input {
   flex-grow: 1;
 }
